fix x overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@ html,
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
+  //-webkit-overflow-scrolling: touch;
   height: 100%;
 }
 body,
